<resources>
    <string name="app_name">PREMİUM LOADER</string>
    <string name="announcement_changelogs"><![CDATA[Announcement & Changelogs]]></string>
    <string name="substime">Your Subscription Time Will Be End On</string>
	<string name="day">Day</string>
	<string name="hour">Hour</string>
	<string name="minute">Minute</string>
	<string name="second">Second</string>
    <string name="select_esp_mode">Select Esp Mode</string>
    <string name="game_support">Games Support : </string>
    <string name="usrname">Your Key : </string>
    <string name="mdl">Device</string>
    <string name="android_version">Android version</string>
    <string name="model_id">Model</string>
    <string name="account_type">Account Type</string>
    <string name="gaming_gg">Game Guardian</string>
    <string name="direct_login">Direct Login</string>
    <string name="blank"></string>
    <string name="hiderec">Hide Record</string>
    <string name="fix_obb">Fix Files OBB</string>
	<string name="logtv1">Root Access</string>
	<string name="logtv2">4.3</string>
	<string name="logtv3">Enter Your Activation Key...</string>
    <string name="telenew">Buy Soruce Tg</string>
    <string name="Check_the_current_status">Mode Selected: </string>
	<string name="Return_to_mode_mode">Switch Mode</string>
    <string name="error">Error</string>
    <string name="please_update_protection_resources">Please Update Protection Resources</string>
    <string name="button_positive">Protection</string>
<string name="button_negative">Other</string>
<string name="button_neutral">Cancel</string>
    <string name="super_user_granted">INFO</string>
    <string name="erorserver">Check you connection</string>
    <string name="userorgamenotregis">USER OR GAME NOT REGISTERED</string>
    <string name="expiredkey">Expired Key...</string>
    <string name="maxdevice">MAX DEVICE REACHED</string>
    <string name="BadParameter">Bad Parameter</string>
    <string name="MAINTENANCE">MAINTENANCE</string>
    <string name="INVALIDPARAMETER">INVALID PARAMETER</string>
    <string name="userblock">USER BLOCKED</string>
    <string name="confirm">Confirm</string>
    <string name="logouta">Are you sure need logout ?, if yes click ok in bellow</string>
    <string name="activity_login_textPassword_hint">Enter Your Name</string>
    <string name="activity_login_textUsername_hint">Enter Licence</string>
    <string name="activity_login_registerText_text">Register!</string>
    <string name="activity_main_days_text">00</string>
    <string name="activity_main_hours_text">00</string>
    <string name="activity_main_minutes_text">00</string>
    <string name="activity_main_seconds_text">00</string>
    <string name="activity_mode_text32_text">SAFE MODE - 32 Bit</string>
    <string name="activity_mode_tex64_text">SAFE MODE - 64 Bit</string>
    <string name="activity_mode_pro64_text">PRO MODE - 64 Bit</string>
    <string name="activity_mode_pro32_text">PRO MODE - 32 Bit</string>
    <string name="activity_mode_textsstart_text">CLICK TO START</string>
    <string name="activity_mode_textsstop_text">CLICK TO STOP</string>
    <string name="activity_mode_txtsafemode_text">SAFE MODE</string>
    <string name="activity_mode_txtpromode_text">PRO MODE</string>
    <string name="activity_mode_textversions1_text">GLOBAL SERVER 1</string>
    <string name="activity_mode_textversions2_text">GLOBAL SERVER 2</string>
    <string name="activity_navigation_textroot_text">Root Access</string>
    <string name="activity_profile_userid_text">Mahyong</string>
    <string name="activity_profile_dates_text">0/20/12</string>
    <string name="activity_profile_devicename_text">ROG - 8</string>
    <string name="activity_profile_osver_text">14</string>
    <string name="activity_setting_bahasa_hint">English</string>
    <string name="alert_one_heading_alert_info_text">Header1</string>
    <string name="alert_one_title_alert_info_text">Nama awal tidak boleh kosong harus terisi!</string>
    <string name="alert_one_btndone_alert_info_text">OK</string>
    <string name="bottom_sheet_dialog_layout_title_text">title</string>
    <string name="bottom_sheet_dialog_layout_msg_text">masasge</string>
    <string name="bottom_sheet_dialog_layout_btn_cancle_text">@android:string/no</string>
    <string name="bottom_sheet_dialog_layout_btn_text">@android:string/ok</string>
    <string name="esp_aimbot_rangetext_text">0</string>
    <string name="esp_aimbot_distancetext_text">0</string>
    <string name="esp_aimbot_bulletspeedtext_text">0</string>
    <string name="esp_aimbot_recoiltext_text">0</string>
    <string name="esp_aimbot_radioButton_text">Head➡(10%)</string>
    <string name="esp_aimbot_radioButton2_text">Neck➡(50%)</string>
    <string name="esp_aimbot_radioButton3_text">Chest➡(70%)</string>
    <string name="esp_aimbot_radioButton9_text">Crosshair Priority✅</string>
    <string name="esp_aimbot_radioButton4_text">Distance Priority❌</string>
    <string name="esp_aimbot_radioButton5_text">Ads or Firing✅</string>
    <string name="esp_aimbot_radioButton6_text">Ads Only❌</string>
    <string name="esp_aimbot_radioButton7_text">Firing Only❌</string>
    <string name="esp_inventory_UTV_text">UTV</string>
    <string name="esp_inventory_MonsterTruck_text">Monster</string>
    <string name="esp_inventory_Buggy_text">Buggy</string>
    <string name="esp_inventory_UAZ_text">UAZ</string>
    <string name="esp_inventory_Trike_text">Trike</string>
    <string name="esp_inventory_Jet_text">Jet</string>
    <string name="esp_inventory_CoupeRB_text">CoupeRB</string>
    <string name="esp_inventory_Motorglider_text">Motor Glider</string>
    <string name="esp_inventory_Bike_text">Bike</string>
    <string name="esp_inventory_Dacia_text">Dacia</string>
    <string name="esp_inventory_Boat_text">Boat</string>
    <string name="esp_inventory_Bus_text">Bus</string>
    <string name="esp_inventory_Mirado_text">Mirado</string>
    <string name="esp_inventory_Snowbike_text">Snowbike</string>
    <string name="esp_inventory_Scooter_text">Scooter</string>
    <string name="esp_inventory_Rony_text">Rony</string>
    <string name="esp_inventory_Snowmobile_text">Snowmobile</string>
    <string name="esp_inventory_Tempo_text">Tempo</string>
    <string name="esp_inventory_Truck_text">Truck</string>
    <string name="esp_inventory_LadaNiva_text">LadaNiva</string>
    <string name="esp_inventory_BRDM_text">BRDM</string>
    <string name="esp_inventory_ATV_text">ATV1</string>
    <string name="esp_inventory_Crate_text">Crate</string>
    <string name="esp_inventory_Airdrop_text">AirDrop</string>
    <string name="esp_inventory_DropPlane_text">DropPlane</string>
    <string name="esp_inventory_FlareGun_text">FlareGun</string>
    <string name="esp_inventory_lootbox_text">LootBox</string>
    <string name="esp_inventory_x2_text">2x</string>
    <string name="esp_inventory_x3_text">3x</string>
    <string name="esp_inventory_x4_text">4x</string>
    <string name="esp_inventory_x6_text">6x</string>
    <string name="esp_inventory_x8_text">8x</string>
    <string name="esp_inventory_reddot_text">Red Dot</string>
    <string name="esp_inventory_hollow_text">Hollow</string>
    <string name="esp_inventory_canted_text">Canted</string>
    <string name="esp_inventory_m416_text">M416</string>
    <string name="esp_inventory_AKM_text">AKM</string>
    <string name="esp_inventory_M16A4_text">M16A4</string>
    <string name="esp_inventory_M762_text">M762</string>
    <string name="esp_inventory_SCARL_text">SCAR-L</string>
    <string name="esp_inventory_AC32_text">ACE32</string>
    <string name="esp_inventory_AUG_text">AUG</string>
    <string name="esp_inventory_HoneyBadger_text">Honey Badger</string>
    <string name="esp_inventory_G36C_text">G36C</string>
    <string name="esp_inventory_Groza_text">Groza</string>
    <string name="esp_inventory_QBZ_text">QBZ</string>
    <string name="esp_inventory_FAMAS_text">FAMAS</string>
    <string name="esp_inventory_M249_text">M249</string>
    <string name="esp_inventory_DP28_text">DP28</string>
    <string name="esp_inventory_MG3_text">MG3</string>
    <string name="esp_inventory_UMP_text">UMP</string>
    <string name="esp_inventory_TommyGun_text">TommyGun</string>
    <string name="esp_inventory_vector_text">Vector</string>
    <string name="esp_inventory_MP5K_text">MP5K</string>
    <string name="esp_inventory_P90_text">P90</string>
    <string name="esp_inventory_UZI_text">UZI</string>
    <string name="esp_inventory_bizon_text">Bizon</string>
    <string name="esp_inventory_AWM_text">AWM</string>
    <string name="esp_inventory_Kar98k_text">Kar98k</string>
    <string name="esp_inventory_M24_text">M24</string>
    <string name="esp_inventory_QBU_text">QBU</string>
    <string name="esp_inventory_Mini14_text">Mini14</string>
    <string name="esp_inventory_SKS_text">SKS</string>
    <string name="esp_inventory_SLR_text">SLR</string>
    <string name="esp_inventory_MK14_text">MK14</string>
    <string name="esp_inventory_Mosin_text">Mosin</string>
    <string name="esp_inventory_Win94_text">Win94</string>
    <string name="esp_inventory_MK12_text">MK12</string>
    <string name="esp_inventory_VSS_text">VSS</string>
    <string name="esp_inventory_AMR_text">AMR</string>
    <string name="esp_inventory_MK47_text">MK47</string>
    <string name="esp_inventory_S12K_text">S12K</string>
    <string name="esp_inventory_S1897_text">S1897</string>
    <string name="esp_inventory_S686_text">S686</string>
    <string name="esp_inventory_M1014_text">M1014</string>
    <string name="esp_inventory_sawed_text">Sawed-Off</string>
    <string name="esp_inventory_DBS_text">DBS</string>
    <string name="esp_inventory_NS2000_text">NS2000</string>
    <string name="esp_inventory_P92_text">P92</string>
    <string name="esp_inventory_R45_text">R45</string>
    <string name="esp_inventory_P18C_text">P18C</string>
    <string name="esp_inventory_P1911_text">P1911</string>
    <string name="esp_inventory_R1895_text">R1895</string>
    <string name="esp_inventory_Scorpion_text">Scorpion</string>
    <string name="esp_inventory_Desert_text">Dessert Eagle</string>
    <string name="esp_inventory_Pan_text">Pan</string>
    <string name="esp_inventory_Machete_text">Machete</string>
    <string name="esp_inventory_Sickle_text">Sickle</string>
    <string name="esp_inventory_Crowbar_text">Crowbar</string>
    <string name="esp_inventory_Crossbow_text">Crossbow</string>
    <string name="esp_inventory_Explosive_text">Explosive Bow</string>
    <string name="esp_inventory_grenade_text">Grenade</string>
    <string name="esp_inventory_molotov_text">Molotov</string>
    <string name="esp_inventory_smoke_text">Smoke</string>
    <string name="esp_inventory_stun_text">Stun</string>
    <string name="esp_inventory_a9_text">9mm</string>
    <string name="esp_inventory_a7_text">7.62mm</string>
    <string name="esp_inventory_a5_text">5.56mm</string>
    <string name="esp_inventory_a12_text">12Gauge</string>
    <string name="esp_inventory_a300_text">300Magnum</string>
    <string name="esp_inventory_a45_text">45ACP</string>
    <string name="esp_inventory_arrow_text">Arrow</string>
    <string name="esp_inventory_BMG50_text">50BMG</string>
    <string name="esp_inventory_bag1_text">Bag L1</string>
    <string name="esp_inventory_helmet1_text">Helmet L1</string>
    <string name="esp_inventory_bag2_text">Bag L2</string>
    <string name="esp_inventory_helmet2_text">Helmet L2</string>
    <string name="esp_inventory_bag3_text">Bag L3</string>
    <string name="esp_inventory_helmet3_text">Helmet L3</string>
    <string name="esp_inventory_vest1_text">Vest L1</string>
    <string name="esp_inventory_vest2_text">Vest L2</string>
    <string name="login">SIGN IN</string>
    <string name="install_game">Install</string>
    <string name="don_t_have_key">Don\'t have Key?</string>
    <string name="version">Version:</string>
    <string name="uninstall_game">Uninstall Game</string>
</resources>