<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:background="@drawable/background">

    <!-- Watermark -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="end">

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/bahasa"
            android:layout_width="110.0dip"
            android:layout_height="40.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/en_regular"
            android:gravity="center"
            android:hint="English"
            android:padding="10.0dip"
            android:textColor="#fff"
            android:textColorHint="#ffff"
            android:textSize="14.5sp"
            android:textStyle="bold"
            app:spinner_arrow_animate="true"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8.0dip"
            app:spinner_arrow_tint="#fff"
            app:spinner_divider_color="#79FFFFFF"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.25dip"
            app:spinner_item_array="@array/bahasa"
            app:spinner_item_height="40.0dip"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@drawable/custom_border_input1"
            app:spinner_popup_elevation="5.0dip"
            app:spinner_popup_focusable="true"
            app:spinner_preference_name="country" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/wmms"
        android:layout_width="match_parent"
        android:layout_marginTop="130dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:src="@drawable/icon" />


    </LinearLayout>

    <!-- Login -->
    <LinearLayout
        android:id="@+id/loginss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/wmms"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#FFFFFF"
                android:textSize="15sp"
				android:fontFamily="@font/cof"
				android:text="@string/logtv3"
				android:textAppearance="?android:attr/textAppearanceMedium"/>

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:background="@drawable/corner1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|end"
                            android:src="@drawable/ic_locks"
                            
                            android:visibility="visible" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/textUsername"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.2"
                        android:backgroundTint="@color/transparent"
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/activity_login_textUsername_hint"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#ff72798b"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="12dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/viewpw"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:tint="#000000"
                            android:src="@drawable/baseline_remove_red_eye_24"
                            android:visibility="visible" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>




        <androidx.cardview.widget.CardView
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/blazered"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/en_regular"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/login"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>
        
       <!-- <com.loopeer.shadow.ShadowView
                android:layout_gravity="center_horizontal"
                android:id="@id/login_btn"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="fill_parent"
                android:layout_height="70.0dip"
                android:foreground="?selectableItemBackground"
                android:layoutDirection="ltr"
                android:elevation="20.0dip"
                app:backgroundColor="@color/colorApp"
                app:cornerRadiusBL="7.0dip"
                app:cornerRadiusBR="7.0dip"
                app:cornerRadiusTL="7.0dip"
                app:cornerRadiusTR="7.0dip"
                app:shadowColor="@color/colorApp"
                app:shadowMargin="9.0dip"
                app:shadowRadius="5.0dip">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:layout_gravity="center">
                    <TextView
                        android:textSize="20.0sp"
                        android:textColor="#ffffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/en_regular" />
                    <ImageView
                        android:layout_width="25.0dip"
                        android:layout_height="25.0dip"
                        android:src="@drawable/ic_logout"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="15.0dip" />
                </RelativeLayout>
            </com.loopeer.shadow.ShadowView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/don_t_have_key" />

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/bolddd"
                android:text="@string/activity_login_registerText_text"
                android:textColor="@color/button" />

        </LinearLayout>
        
        <LinearLayout
			android:gravity="center"
			android:orientation="horizontal"		
			android:background="@android:color/transparent"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="25.0dip"
			android:layout_marginRight="25.0dip"
			android:layout_marginBottom="80.0dip">
			<LinearLayout
				android:id="@+id/timg"
				android:gravity="center"
				android:layout_gravity="center|left"
				android:orientation="horizontal"
				android:background="@android:color/transparent"
				android:padding="8.0dip"
				android:layout_width="wrap_content"
				android:layout_height="60.0dip"
				android:layout_weight="1.0">
				<ImageView
					android:tint="#FF0000"
					android:layout_width="27.0dip"
					android:layout_height="27.0dip"
					android:src="@drawable/ic_tele"
					android:scaleType="fitCenter"/>
				<TextView
					android:textSize="12.0sp"
					android:textStyle="bold"
					android:textColor="#ffbdbdbd"
					android:padding="8.0dip"
					android:id="@+id/ssl1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/telenew"
					android:fontFamily="@font/cof" />
			</LinearLayout>

		</LinearLayout>

		


    </LinearLayout>
    
    <!-- Newly added bottom section -->
		<LinearLayout
            android:id="@+id/bottomcopyright"
			android:gravity="center"
            android:layout_below="@id/loginss"
			android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
			android:orientation="horizontal"
            android:layout_marginLeft="20.0dip"
			android:layout_marginRight="20.0dip"
			android:layout_marginBottom="20dp" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:textSize="12.0sp"
				android:textColor="#FFFFFF"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:fontFamily="@font/cof"
				
				android:layout_marginEnd="10.0dip" />
			<TextView
				android:textSize="12.0sp"
				android:textColor="#FF0000"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/logtv2"
				android:fontFamily="@font/cof"
				 />
		</LinearLayout>


</RelativeLayout>